[project]
name = "hse-pkp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdal==3.10",
    "geopandas>=1.1.1",
    "psycopg2-binary>=2.9.10",
    "pyproj>=3.7.1",
    "rasterio>=1.4.3",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
]
[tool.uv.sources]
gdal = [
  { index = "gdal-wheels" }
]

[[tool.uv.index]]
name = "gdal-wheels"
url = "https://gitlab.com/api/v4/projects/61637378/packages/pypi/simple"
explicit = true
